kubernetes/loadbalancer/ingress.ssl.yml
# deployment of the pods for traefik service
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
    k8s-traefik: traefik  
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-serviceaccount
      terminationGracePeriodSeconds: 60
      volumes:
        - name: ssl-ahmn
          secret:
            secretName: traefik-cert-ahmn
        # - name: ssl-ahmn
        #   secret:
        #     secretName: traefik-cert-ahmn
        - name: config
          configMap:
            name: traefik-conf
      containers:
      - image: traefik
        name: traefik-ingress-lb
        volumeMounts:
          - mountPath: "/config"
            name: "config"        
          - mountPath: "/ssl/ahmn"
            name: "ssl-ahmn" 
          # - mountPath: "/ssl/ahmn"
          #   name: "ssl-ahmn" 
        ports:
          - containerPort: 80
          - containerPort: 443
          - containerPort: 8080
        args:
        - --web
        - --kubernetes
        - --configfile=/config/traefik.toml
        - --logLevel=INFO
---
# service definition for traefik
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
  labels:
    k8s-traefik: traefik  
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - port: 80
    targetPort: 8080
---
# ingress for the Traefik admin ui
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  labels:
    k8s-traefik: traefik  
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - secretName: ssl-ahmn
    hosts:
      - dashboard.CUSTOMERID.healthcatalyst.net
  rules:
  - host: dashboard.CUSTOMERID.healthcatalyst.net
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80
---
# default backend so if no rules match it goes here
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-default-route
  namespace: kube-system
  labels:
    k8s-traefik: traefik    
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80         
---
