kubernetes/loadbalancer/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
  labels:
    k8s-traefik: traefik    
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  labels:
    k8s-traefik: traefik    
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: dashboard.CUSTOMERID.healthcatalyst.net
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80         
---
# default backend so if no rules match it goes here
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-default-route
  namespace: kube-system
  labels:
    k8s-traefik: traefik    
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80         
---
